# simple-btc-rust

./: Cargo.toml
btc_data/: db
src/: block.rs  blockchain.rs  cli.rs  main.rs  proof_of_work.rs  transaction.rs  utxoset.rs  wallet.rs
