[package]
name = "simple-btc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base58 = "0.2.0"
clap = { version = "4.4.14", features = ["derive"] }
ecdsa = { version = "0.16.9" }
hex = "0.4.3"
num-bigint = "0.4.4"
p256 = { version = "0.13.2", features = ["ecdsa-core", "ecdsa"] }
ripemd = "0.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.5.0"
sha3 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
